--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Personal Portfolio - Showcasing my skills, education and projects">
     <title>Anifar Boke Mariba | Software Engineer Portfolio</title>
-    <link rel="icon" href="assets/favicon.jpg" type="image/jpg +xml">
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="icon" href="favicon.jpg" type="image/jpg +xml">
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="main.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -69,7 +69,7 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="assets/profile.jpg" alt="Anifar Boke Mariba - Software Engineer">
+                    <img src="profile.jpg" alt="Anifar Boke Mariba - Software Engineer">
                 </div>
             </div>
         </div>
@@ -234,7 +234,7 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="assets/project1.jpg" alt="County Records Management System">
+                        <img src="project1.jpg" alt="County Records Management System">
                     </div>
                     <div class="project-content">
                         <h3>County Records Management System</h3>
@@ -253,7 +253,7 @@
                 </div>
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="assets/project2.jpg" alt="Inventory Management System">
+                        <img src="project2.jpg" alt="Inventory Management System">
                     </div>
                     <div class="project-content">
                         <h3>Inventory Management System</h3>
@@ -272,7 +272,7 @@
                 </div>
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="assets/project3.jpg" alt="Network Monitoring Tool">
+                        <img src="project3.jpg" alt="Network Monitoring Tool">
                     </div>
                     <div class="project-content">
                         <h3>Network Monitoring Tool</h3>
